Geek_Practice/compiling_error.txt
/Users/chiranjeev/Documents/C_and_Cpp/Geek_Practice/Subarray_with_given_sum.cpp:7:3: error: use of undeclared identifier 'summap'
  summap<int, int> map;
  ^
/Users/chiranjeev/Documents/C_and_Cpp/Geek_Practice/Subarray_with_given_sum.cpp:7:13: error: expected '(' for function-style cast or type construction
  summap<int, int> map;
         ~~~^
/Users/chiranjeev/Documents/C_and_Cpp/Geek_Practice/Subarray_with_given_sum.cpp:10:25: error: use of undeclared identifier 'summap'
  if (curr_sum==sum  || summap.find(curr_sum-sum) != summap.end())
                        ^
/Users/chiranjeev/Documents/C_and_Cpp/Geek_Practice/Subarray_with_given_sum.cpp:10:54: error: use of undeclared identifier 'summap'
  if (curr_sum==sum  || summap.find(curr_sum-sum) != summap.end())
                                                     ^
/Users/chiranjeev/Documents/C_and_Cpp/Geek_Practice/Subarray_with_given_sum.cpp:13:15: error: use of undeclared identifier 'summap'
                         for(int j=summap[curr_sum-sum]+1;j<=i;j++)
                                   ^
/Users/chiranjeev/Documents/C_and_Cpp/Geek_Practice/Subarray_with_given_sum.cpp:13:41: error: use of undeclared identifier 'i'
                         for(int j=summap[curr_sum-sum]+1;j<=i;j++)
                                                             ^
/Users/chiranjeev/Documents/C_and_Cpp/Geek_Practice/Subarray_with_given_sum.cpp:16:20: error: use of undeclared identifier 'i'
                         for(int k=0;k<=i;k++)
                                        ^
/Users/chiranjeev/Documents/C_and_Cpp/Geek_Practice/Subarray_with_given_sum.cpp:21:5: error: C++ requires a type specifier for all declarations
    map[curr_sum] = i;
    ^
/Users/chiranjeev/Documents/C_and_Cpp/Geek_Practice/Subarray_with_given_sum.cpp:21:21: error: use of undeclared identifier 'i'
    map[curr_sum] = i;
                    ^
/Users/chiranjeev/Documents/C_and_Cpp/Geek_Practice/Subarray_with_given_sum.cpp:23:1: error: extraneous closing brace ('}')
}
^
10 errors generated.
